--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,8 +9,14 @@ libktmsgpack_la_SOURCES = \
 
 noinst_HEADERS = \
 	gen/KyotoTyrantService.hpp \
-	gen/KyotoTyrantService_server.hpp
+	gen/KyotoTyrantService_client.hpp \
+	gen/KyotoTyrantService_server.hpp \
+	gen/client.hpp \
+	gen/server.hpp \
+	gen/types.hpp
 
 # -version-info CURRENT:REVISION:AGE
 libktmsgpack_la_LDFLAGS = -version-info 0:0:0
+
+EXTRA_DIST = kt.thrift
 
